Fixing alignment of Baba image

--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -252,6 +252,5 @@ form.join {
     background: url("img/begin_brunchbites.png");
     background: url("img/begin_tutoring.png");
     background: url("img/sdsc_logo_small.png");
-    background: url("img/BabaWithSmile.png
-    ");
+    background: url("img/BabaWithSmile.png");
 }
